Changes
=======

1.1dev (TBD)
------------

Deprecations:

- Support for Python 2 is deprecated and a warning is raised from the
  rasterio.compat module. This module will be deleted in a future version.

New features:

- Zoom levels can be automatically computed by rio-overview (#511).
- An alternative endpoint for S3-compatible network storage can now be set when
  creating an instance of AWSSession (#1779). See GDAL's documentation of its
  AWS_S3_ENDPOINT configuration option for more details.
- The merge tool has a new ``method`` keyword argument that can be used to
  override the default painter's algorithm. It takes an alternative method name
  as a string or a callable. Please see the merge tool docstring for the
  callable's signature (#1500).
- A new ``rasterio.transform.from_gcps()`` returns the Affine matrix that is a
  best fit to given ground control points (#1749).

Bug fixes:

- Handle the AWS extension mentioned in #1159. Note that this does not enable
  writing directly to S3.
- A syntax error in the specification of a Python version marker for enum34 in
  requirements.txt has been fixed.
- Several cases of memory leaks involving temporary in-memory datasets have
  been fixed. The rasterio test suite now runs without leaving any datasets
  open.
- The default mode for dataset sharing has been switch from ``sharing=True`` to
  ``sharing=False`` to better serve development of multithreaded applications
  (#1775).
- Tests of rasterizing invalid shapes now catch the warnings about shape
  skipping.

1.0.28 (2019-09-09)
-------------------

- Coercion to ``int`` was forgotten in the block size guard introduced in
  1.0.27 and code that passes string valued ``blockxsize`` and ``blockysize``
  keyword arguments to ``rasterio.open()`` was broken (#1769).  This has been
  fixed in 1.0.28.

1.0.27 (2019-09-05)
-------------------

- Resolve #1744 by adding a ``dtype`` keyword argument to the WarpedVRT