@@ -11,6 +11,9 @@ Deprecations:
 
 New features:
 
+- Added a new ``tag_namespaces()`` method datasets that returns names of
+  metadata namespaces that can be passed to the existing ``tags()`` method
+  (#1740).
 - Zoom levels can be automatically computed by rio-overview (#511).
 - An alternative endpoint for S3-compatible network storage can now be set when
   creating an instance of AWSSession (#1779). See GDAL's documentation of its
